# llvm-project

./: .cursorrules  __build.sh
.specstory/: .project.json
.specstory/history/: 2025-12-01_04-08Z-编译-clangd-dev-版本.md  2025-12-01_08-02Z-修复-read-cpp-中的模板实例化问题.md
clang-tools-extra/clangd/: ClangdServer.cpp  ClangdServer.h  Hover.cpp  Hover.h  SourceCode.cpp  SourceCode.h  XRefs.cpp  XRefs.h
clang-tools-extra/clangd/index/dex/: Dex.cpp
clang-tools-extra/clangd/unittests/: HoverTests.cpp
hip-test/: .clangd  compile_commands.json  read.cpp  test_debug.py  test_debug2.py  test_load_chain.py  test_load_chain_debug.py  test_load_chain_v2.py  test_load_jump.py  test_load_simple.py  test_load_v2.py  test_template_context.py
hip-test/.specstory/: .project.json
jumptest/: compile_commands.json  jump.cpp  jump1.h  jump2.cpp  jump2.h  jump3.cpp  test_both_types.py  test_clangd.py  test_debug.py  test_debug_log.py  test_jump3.py  test_real_workflow.py  test_rows_hover.py  test_simple.py  test_single_file.py  test_user_flow.py
jumptest/.specstory/: .project.json
mlir/examples/toy/: CMakeLists.txt
mlir/examples/toy/Ch0/: CMakeLists.txt  toyc.cpp
mlir/examples/toy/Ch0/include/toy/: CMakeLists.txt  Ops.td  Passes.h  ShapeInferenceInterface.h  ShapeInferenceInterface.td
mlir/examples/toy/Ch0/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  MLIRGen.cpp  ShapeInferencePass.cpp  ToyCombine.cpp  ToyCombine.td
